--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -22,7 +22,7 @@
 		           <%= ff.hidden_field :order_id, value: @order.id %>
 			    <% end %>
 		    <% end %>
-		    <%= f.submit (t ".createorder") %>
+		    <%= f.submit 'mua hàng' %>
 		 <% end %>
 	</div>
 	<%end%>
