--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class = "text-xl">
+  <body class = "text-lg">
     <%= render 'layouts/header'%>
     <div class="container-fluid">
       <p class="notice"><%= notice %></p>
