--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -43,6 +43,13 @@
                   <p>Inactive Page</p>
                 </a>
               </li>
+              <li class="nav-item">
+                <a href="/admin/orders" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>ORDERS</p>
+                </a>
+              </li>
+
             </ul>
           </li>
           <li class="nav-item">
