--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,2 +1,67 @@
-<h1>Pages#help</h1>
-<p>Find me in app/views/pages/help.html.erb</p>
+
+
+
+
+
+<div class="container" style = "height: 30%">
+  
+  <div id="myCarousel" class="carousel slide production-carousel" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators" style = "display: none">
+      <% array_production.each_with_index do |p,i| %>
+        <li data-target="#myCarousel" data-slide-to="0" class="<% if i == 0 %><%= 'active' %> <% end %>"></li>
+      <% end %>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <% array_production.each_with_index do |p,i| %>
+        <div class="item <% if i == 0 %><%= 'active' %> <% end %>">
+        
+            <div class = 'row'>
+              <div class="row row-cols-6" >
+                <% p.each do |production| %>
+                  <div class="d-flex flex-column text-center col-sm-2">
+                    <div>
+                      <% if production.url.present? %>
+                        <%= link_to image_tag( production.url, width: "100%" ), production_path(production), id: "count-#{production.id}", class: "click-in-production", data: {id: "#{production.id}"} %>
+                      <% else %>
+                        <%= link_to image_tag('https://cdn.tgdd.vn/Products/Images/42/213033/iphone-12-pro-max-195420-015412-400x400.png', width: "100%" ), production_path(production), id: "count-#{production.id}", class: "click-in-production", data: {id: "#{production.id}"} %>
+                      <% end %>
+                    <div class = ""><%= production.name %></div>
+                    </div>
+                  </div>
+                <% end %> 
+              </div>
+            </div>
+        </div>
+      <% end %>
+    </div>
+
+    <!-- Left and right controls -->
+    <div id="linkcarousel" style = "display: none">
+      
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+  $('.production-carousel').mouseenter(function(){
+    debugger
+    $('#linkcarousel').show();
+  })
+   $('.production-carousel').mouseleave(function(){
+    $('#linkcarousel').hide();
+  })
+
+</script>
+
+  
