--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,12 @@
+<style type="text/css">
+  .carousel-control{
 
+    width: 30px !important;
+    height: 40% !important;
+  }
+</style>
 	
-<div class="container" style = "height: 30%">
+<div class="container" style = "height: 30%  ">
   
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -15,7 +21,8 @@
       <% @productions.each_with_index do |p,i| %>
         <div class="item <% if i == 0 %><%= 'active' %> <% end %>">
         	Đây là slide <%= i %>
-            <div class = 'row'>
+          <div class = 'container' style = "background-color: white">
+            <div class = 'row' >
               <div class = "col-sm-3"> 
                 <% if p.url != nil || p.url == '' %>
                   <%= image_tag(p.url, width: '80%') %>
@@ -28,6 +35,7 @@
                <%= link_to 'Mua ngay', p %>
               </div>
             </div>
+          </div>  
         </div>
       <% end %>
     </div>
@@ -59,34 +67,61 @@
 
 
 
-<div class="row" style = "margin-top: 50px">
-  <div class="col-sm-3">
+<div class="row" style = "margin-top: 50px; background-color: white">
+  <b style = "padding-left:5%; font-size:30px; font-family: Verdana; color: gray; ">Hàng Mới Về</b>
+    
+    <div id="production-Carousel" class="carousel slide production-carousel" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators" style = "display: none">
+      <% array_production.each_with_index do |p,i| %>
+        <li data-target="" data-slide-to="0"></li>
+      <% end %>
+    </ol>
 
-	</div> 
-   <div class = "col-sm-9">      
-    <div class="row row-cols-6" >
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <% array_production.each_with_index do |p,i| %>
+        <div class="item <% if i == 0 %><%= 'active' %> <% end %>">
+        
+            <div class = 'row'>
+                
+              <div class="row row-cols-6"  >
+                <% p.each do |production| %>
+                  <div class="d-flex flex-column text-center col-sm-3" >
+                    <div>
+                      <% if production.url.present? %>
+                        <%= link_to image_tag( production.url, width: "80%" ), production_path(production), id: "count-#{production.id}", class: "click-in-production", data: {id: "#{production.id}"} %>
+                      <% else %>
+                        <%= link_to image_tag('https://cdn.tgdd.vn/Products/Images/42/213033/iphone-12-pro-max-195420-015412-400x400.png', width: "80%" ), production_path(production), id: "count-#{production.id}", class: "click-in-production", data: {id: "#{production.id}"} %>
+                      <% end %>
+                    <div class = ""><%= production.name %></div>
+                    </div>
+                  </div>
+                <% end %> 
+              </div>
+            </div>
+        </div>
+      <% end %>
+    </div>
 
-		    <% @productions.each_with_index do |production, i| %>
-		        <div class="d-flex flex-column text-center col-sm-2">
-		          <div>
-		          	<% if production.url.present? %>
-		            	<%= link_to image_tag( production.url, width: "100%" ), production_path(production), id: "count-#{production.id}", class: "click-in-production", data: {id: "#{production.id}"} %>
-		            <% else %>
-		            	<%= link_to image_tag('https://cdn.tgdd.vn/Products/Images/42/213033/iphone-12-pro-max-195420-015412-400x400.png', width: "100%" ), production_path(production), id: "count-#{production.id}", class: "click-in-production", data: {id: "#{production.id}"} %>
-		            <% end %>
-		          <div class = ""><%= production.name %></div>
-		          </div>
-		        </div>
-
-		    <% end %>  
-    	</div>
-
-    	<div id="page_links">
-			   <%= will_paginate @productions %>
-
-			</div>
-
-	</div>
+  <div id="linkcarousel-1" style = "">
+    
+    <a class="left carousel-control" href="#production-Carousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#production-Carousel" data-slide="next" >
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  </div>
+    <!-- Left and right controls -->
 </div>
 
-<
+<script type="text/javascript">
+ 
+</script>
+
+
+</div>
