--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,9 @@
 		background-color: #DCDCDC;
 		font-size: 20px ; 
 		opacity: 70%;
+		padding-top: 30px; 
 		padding-bottom: 30px; 
+		clear: both;
 	}
 	.column {
 	  float: left;
@@ -19,7 +21,7 @@
 	.row:after {
 	  content: "";
 	  display: table;
-	  clear: both;
+	
 	}
 
 </style>
