--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -13,6 +13,7 @@
 
 
 
+  <input type="hidden" name="current_user" value = "<%= current_user.id %>">
 
 <div class="container" style = "height: 30%">
   
@@ -114,4 +115,37 @@
 
 </script>
 
+
+<div class="row">
+  <div class="col-md-9">
+    <ul id="conversations-list">
+      <% @conversations.each do |conversation| %>
+        <%= render 'conversations/conversation', conversation: conversation, user: current_user %>
+      <% end %>
+    </ul>
+  </div>
+
+  <div class="col-md-3">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">User list <span class = "hide-show">X</span></h3>
+      </div>
+      <div class="panel-body">
+        <ul class = "toggle">
+          <% @users.each do |user| %>
+            <li><%= link_to user.email, conversations_path(user_id: user), remote: true, method: :post %></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.hide-show').click(function(){
+      $('.toggle').toggle()
+    })
+  })
+</script>
   
