--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -67,7 +67,8 @@
 
 
 <div class="row" style = "margin-top: 50px; background-color: white">
-  <b style = "padding-left:5%; font-size:30px; font-family: Verdana; color: gray; ">Hàng Mới Về</b>
+  <b style = "float: left; font-size:30px; font-family: Verdana; color: gray; ">Hàng Mới Về</b>
+  <b style = "float: right; font-size:30px; font-family: Verdana; color: gray; "><a href="/contact"><i class="fa fa-mobile-phone" style="font-size:24px"></i></a></b>
     
     <div id="production-Carousel" class="carousel slide production-carousel" data-ride="carousel">
     <!-- Indicators -->
