--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,7 +57,9 @@ body {
 
 <div class="header">
   <a href="/home" class="logo">Mobile-Store</a>
+   
   <div class="header-right">
+    
      <% if user_signed_in? %>
       <% if current_user.admin? %>
         <%= link_to admin_home_path do %><span class="glyphicon glyphicon-log-out"></span> Admin</a><% end %>
@@ -76,3 +78,7 @@ body {
      
   </div>
 </div>
+
+<script type="text/javascript">
+  
+</script>
