--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -13,7 +13,7 @@
        
         </div>
         <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
+          <a href="/admin/home" class="d-block">Phone Store</a>
         </div>
       </div>
 
