--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -133,7 +133,9 @@
       <div class="panel-body">
         <ul class = "toggle">
           <% @users.each do |user| %>
-            <li><%= link_to user.email, conversations_path(user_id: user), remote: true, method: :post %></li>
+            <li><%= link_to gravatar_for(user, size: 50), conversations_path(user_id: user), remote: true, method: :post %>
+              <%= link_to user.fullname, conversations_path(user_id: user), remote: true, method: :post %>
+            </li>
           <% end %>
         </ul>
       </div>
